--- a/tests.html
+++ b/tests.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Tests</title>
-  <link rel="stylesheet" href="/styles/libs/qunit-1.12.0.css">
+	<meta charset="utf-8">
+	<title>SpaceSwitcher Tests</title>
+	<link rel="stylesheet" href="styles/libs/qunit-1.12.0.css">
 </head>
 <body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
-  <script src="/scripts/libs/qunit-1.12.0.js"></script>
-  <script src="/scripts/tests.js"></script>
+	<div id="qunit"></div>
+	<div id="qunit-fixture"></div>
+	<script src="scripts/libs/jquery-2.0.3.min.js"></script>
+	<script src="scripts/libs/qunit-1.12.0.js"></script>
+	<script src="scripts/jquery.highlight.js"></script>
+	<script src="scripts/jquery.search.js"></script>
+	<script src="scripts/tests.js"></script>
 </body>
 </html>
