--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 	<script src="scripts/jquery.highlight.js"></script>
 	<script src="scripts/jquery.search.js"></script>
 	<script src="scripts/spaceswitcher.js"></script>
+	<script src="scripts/app.js"></script>
 </body>
 </html>
