Added keyboard navigation.

--- a/index.html
+++ b/index.html
@@ -18,21 +18,8 @@
 <body>
 
 	<div class="navbar">
-		<div class="navbar-item">
+		<div class="navbar-item" id="gotospace">
 			<div>Go to space</div>
-			<div class="spaceswitcher">
-				<div class="search">
-					<input type="search" class="search-input" />
-				</div>
-				<div class="results">
-					<div class="group">
-						<div class="header">Organization</div>
-						<div class="item">space name</div>
-						<div class="item">space name</div>
-						<div class="item">space name</div>
-					</div>
-				</div>
-			</div>
 		</div>
 	</div>
 	
