Added tests for spaceswitcher.

--- a/tests.html
+++ b/tests.html
@@ -12,6 +12,7 @@
 	<script src="scripts/libs/qunit-1.12.0.js"></script>
 	<script src="scripts/jquery.highlight.js"></script>
 	<script src="scripts/jquery.search.js"></script>
+	<script src="scripts/spaceswitcher.js"></script>
 	<script src="scripts/tests.js"></script>
 </body>
 </html>
