--- a/index.html
+++ b/index.html
@@ -4,25 +4,21 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=1024" />
-
-	<title>Podio SpaceSwitcher Component</title>
-	
 	<meta name="author" content="Ole Bjørn Michelsen" />
 	<meta name="description" content="" />
-
+	<title>Podio SpaceSwitcher Component</title>
 	<style type="text/css"></style>	
 	<link rel="stylesheet" href="styles/layout.css" type="text/css" />
-	
 	<link rel="shortcut icon" href="favicon.png" />
 </head>
 <body>
-
-	<div class="navbar">
-		<div class="navbar-item" id="gotospace">
-			<div>Go to space</div>
+	<div class="content">
+		<div class="navbar">
+			<div class="navitem" id="gotospace">
+				<div class="inner">Go to space <span class="icon icon-arrow-down"></span></div>
+			</div>
 		</div>
 	</div>
-	
 	<script src="scripts/libs/jquery-2.0.3.min.js"></script>
 	<script src="scripts/jquery.highlight.js"></script>
 	<script src="scripts/jquery.search.js"></script>
