Added dynamic height of inner results div.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=1024" />
+	<meta name="viewport" content="width=640" />
 	<meta name="author" content="Ole Bjørn Michelsen" />
 	<meta name="description" content="" />
 	<title>Podio SpaceSwitcher Component</title>
@@ -15,7 +15,7 @@
 	<div class="content">
 		<div class="navbar">
 			<div class="navitem" id="gotospace">
-				<div class="inner">Go to space <span class="icon icon-arrow-down"></span></div>
+				<div class="text">Go to space <span class="icon icon-arrow-down"></span></div>
 			</div>
 		</div>
 	</div>
