Added Podio logo to layout.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 	<meta name="author" content="Ole Bjørn Michelsen" />
 	<meta name="description" content="" />
 	<title>Podio SpaceSwitcher Component</title>
-	<style type="text/css"></style>	
 	<link rel="stylesheet" href="styles/layout.css" type="text/css" />
 	<link rel="shortcut icon" href="favicon.png" />
 </head>
 <body>
 	<div class="content">
 		<div class="navbar">
+			<div class="navbrand">
+				<a href="https://podio.com/"><img src="images/podio.png" alt="Podio FTW" width="120" height="45" /></a>
+			</div>
 			<div class="navitem" id="gotospace">
 				<div class="text">Go to space <span class="icon icon-arrow-down"></span></div>
 			</div>
