Added text to example content and adjusted CSS.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
 	<link rel="shortcut icon" href="favicon.png" />
 </head>
 <body>
-	<div class="content">
-		<div class="navbar">
-			<div class="navbrand">
-				<a href="https://podio.com/"><img src="images/podio.png" alt="Podio FTW" width="120" height="45" /></a>
-			</div>
-			<div class="navitem" id="gotospace">
-				<div class="text">Go to space <span class="icon icon-arrow-down"></span></div>
-			</div>
+	<div class="navbar">
+		<div class="navbrand">
+			<a href="https://podio.com/"><img src="images/podio.png" alt="Podio FTW" width="120" height="45" /></a>
 		</div>
+		<div class="navitem"><a href="https://podio.com/" class="text">Home</a></div>
+		<div class="navitem" id="gotospace">
+			<div class="text">Go to space <span class="icon icon-arrow-down"></span></div>
+		</div>
+	</div>
+	<div class="content">
+		<h1>Podio SpaceSwitcher Component</h1>
+		<p>Welcome to the demo of the Podio SpaceSwitcher Component.</p>
+		<p>Developed using only jQuery and CSS.</p>
 	</div>
 	<script src="scripts/libs/jquery-2.0.3.min.js"></script>
 	<script src="scripts/jquery.highlight.js"></script>
