Added some more content.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 		<h1>Podio SpaceSwitcher Component</h1>
 		<p>Welcome to the demo of the Podio SpaceSwitcher Component.</p>
 		<p>Developed using only jQuery and CSS.</p>
+		<h2>Files</h2>
+		<p>
+			<ul>
+				<li><a href="scripts/spaceswitcher.js">spaceswitcher.js</a></li>
+				<li><a href="scripts/jquery.highlight.js">jquery.highlight.js</a></li>
+				<li><a href="scripts/jquery.search.js">jquery.search.js</a></li>
+				<li><a href="styles/layout.less">layout.less</a></li>
+				<li><a href="styles/mixins.less">mixins.less</a></li>
+			</ul>
+		</p>
 	</div>
 	<script src="scripts/libs/jquery-2.0.3.min.js"></script>
 	<script src="scripts/jquery.highlight.js"></script>
