Added org. images and fixed resizing bug.

--- a/index.html
+++ b/index.html
@@ -22,18 +22,30 @@
 	</div>
 	<div class="content">
 		<h1>Podio SpaceSwitcher Component</h1>
-		<p>Welcome to the demo of the Podio SpaceSwitcher Component.</p>
-		<p>Developed using only jQuery and CSS.</p>
+		<p>Developed using jQuery and LESS. Tested using Chrome 31, Firefox 25 and Safari 7.</p>
+		<p>Sanity checked using QUnit. See <a href="http://app.michelsen.dk/SpaceSwitcher/tests.html">test suite</a> (online only).</p>
 		<h2>Files</h2>
 		<p>
 			<ul>
-				<li><a href="scripts/spaceswitcher.js">spaceswitcher.js</a></li>
-				<li><a href="scripts/jquery.highlight.js">jquery.highlight.js</a></li>
-				<li><a href="scripts/jquery.search.js">jquery.search.js</a></li>
-				<li><a href="styles/layout.less">layout.less</a></li>
-				<li><a href="styles/mixins.less">mixins.less</a></li>
+				<li>
+					<span>Scripts</span>
+					<ul>
+						<li><a href="scripts/spaceswitcher.js">spaceswitcher.js</a></li>
+						<li><a href="scripts/jquery.highlight.js">jquery.highlight.js</a></li>
+						<li><a href="scripts/jquery.search.js">jquery.search.js</a></li>
+						<li><a href="scripts/tests.js">tests.js</a></li>
+					</ul>
+				</li>
+				<li>
+					<span>Styles</span>
+					<ul>
+						<li><a href="styles/layout.less">layout.less</a></li>
+						<li><a href="styles/mixins.less">mixins.less</a></li>
+					</ul>
+				</li>
 			</ul>
 		</p>
+		<p><a href="http://app.michelsen.dk/SpaceSwitcher/">See this demo online</a></p>
 	</div>
 	<script src="scripts/libs/jquery-2.0.3.min.js"></script>
 	<script src="scripts/jquery.highlight.js"></script>
